fix h1 centering on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,7 @@ body {
 h1 {
     font-size: 3.2em;
     line-height: 1.1;
+    text-align: center;
 }
 
 footer {
@@ -49,25 +50,8 @@ footer {
     z-index: -1;
 }
 
-.logo {
-    height: 6em;
-    padding: 1.5em;
-    will-change: filter;
-    transition: filter 300ms;
-}
-.logo:hover {
-    filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-    filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
 .card {
     padding: 2em;
-}
-
-.read-the-docs {
-    color: #888;
 }
 
 button {
